2014-11-08  Martin Rudalics  <rudalics@gmx.at>

	* faces.el (face-set-after-frame-default): Enable running
	`window-configuration-change-hook'.

2014-11-07  Juri Linkov  <juri@jurta.org>

	* replace.el: History for query replace pairs.
	(query-replace-defaults): Promote to a list of cons cell.  Doc fix.
	(query-replace-from-to-separator): New variable.
	(query-replace-read-from): Let-bind query-replace-from-to-history
	to a list of FROM-TO strings created from query-replace-defaults
	and separated by query-replace-from-to-separator.  Use it as
	the history while reading from the minibuffer.  Split the returned
	string by the separator to get FROM and TO parts, and add them
	to the history variables.
	(query-replace-read-to): Add FROM-TO pairs to query-replace-defaults.
	(query-replace-regexp-eval): Let-bind query-replace-defaults to nil.
	http://lists.gnu.org/archive/html/emacs-devel/2014-11/msg00253.html

	* isearch.el (isearch-text-char-description): Keep characters
	intact and put formatted strings with the `display' property.

2014-11-07  Martin Rudalics  <rudalics@gmx.at>

	* cus-start.el (frame-resize-pixelwise): Fix group.
	(frame-inhibit-implied-resize): Add entry.

2014-11-07  Daiki Ueno  <ueno@gnu.org>

	* epa.el (epa-pinentry-mode): New user option.
	(epa-sign-file, epa-encrypt-file, epa-decrypt-region)
	(epa-sign-region, epa-encrypt-region): Respect epa-pinentry-mode.
	* epa-file.el (epa-file-insert-file-contents)
	(epa-file-write-region): Respect epa-pinentry-mode.

2014-11-07  Daiki Ueno  <ueno@gnu.org>

	* epg.el (epg--list-keys-1): Ignore fields after the 15th field
	(bug#18979).  Reported by Hideki Saito.

2014-11-06  Daiki Ueno  <ueno@gnu.org>

	* emacs-lisp/package.el (package--display-verify-error): New function.
	(package--check-signature): Use it to display output sent to stderr.

2014-11-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (pop): Don't call the getter twice (bug#18968).
